--- a/Florea_DeliaCristina_Lab7/ListPage.xaml
+++ b/Florea_DeliaCristina_Lab7/ListPage.xaml
@@ -3,10 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Florea_DeliaCristina_Lab7.ListPage"
              Title="ListPage">
+    <ContentPage.Content xmlns:local="clr-namespace:Florea_DeliaCristina_Lab7">
     <StackLayout Margin="20">
         <Editor Placeholder="Enter the description of the shopping list"
                 Text="{Binding Description}"
-                HeightRequest="100" />
+                HeightRequest="50" >
+            <Editor.Behaviors>
+                <local:ValidationBehaviour />
+            </Editor.Behaviors>
+        </Editor>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -16,7 +21,21 @@
                     Clicked="OnSaveButtonClicked" />
             <Button Grid.Column="1"
                     Text="Delete"
-                     Clicked="OnDeleteButtonClicked"/>
+                    Clicked="OnDeleteButtonClicked"/>
         </Grid>
+
+        <ListView x:Name="listView"
+                    Margin="20">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Detail="{Binding Description}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+            <Button Text="Delete item" MaximumWidthRequest="300" Clicked="OnDeleteItemButtonClicked"/>
+
+            <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300"
+                Clicked="OnChooseButtonClicked"/>
     </StackLayout>
+    </ContentPage.Content>
 </ContentPage>
